feat: #250414 更新changelog和版本

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,37 @@
 CHANGELOG
 ==============
+25.2.2（需联系EduSoho工作人员安装）
+PC
+管理员
+【新增】课程管理：新增“AI伴学服务”开关，开启后可选择AI智能体老师保存后AI老师将根据所选专业为学员提供精准的题目答疑和学习问题解答服务。
+【新增】课程管理：开启“AI伴学服务”后，根据课程所属专业的考试时间，设置多个时间段，保存后学员在制定学习计划时选择管理员设置的时间，约束学员在考试前完成学习。
+【新增】课程管理：开启“AI伴学服务”后，可开启“AI知识点诊断”，开启后AI将根据课程内容生成知识点，学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后，根据学员错题匹配知识点推送对应的学习任务进行学习。
+学员
+【新增】开启“AI伴学服务”的课程，学员加入后提醒其制定学习计划，选择学习起止时间和每周学习日以及每日学习时长，预览学习计划，保存后生成学习计划。
+【新增】学员制定学习计划后，在每个学习日发送督学提醒，提醒学员完成学习。学习计划根据学员学习进度和答题情况自适应调整。
+【新增】学员在任务详情页（考试任务除外）学习时，可向AI伴学助手发送问题，获取解答。
+【新增】学员在课程作业/练习任务和课程绑定的题库练习内答题时，可向AI伴学助手咨询题目的解题思路。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后可向AI伴学助手咨询题目的正确答案和题目解析。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后，根据学员的错题情况，将对应知识点和相关学习任务推送给学员。
+【新增】将专业对应的官网资讯推送给该专业下的课程学员。
+App
+【新增】开启“AI伴学服务”的课程，学员加入后提醒其制定学习计划，选择学习起止时间和每周学习日以及每日学习时长，预览学习计划，保存后生成学习计划。
+【新增】学员制定学习计划后，在每个学习日发送督学提醒，提醒学员完成学习。学习计划根据学员学习进度和答题情况自动调整。
+【新增】学员在任务详情页（考试任务除外）学习时，可向AI伴学助手发送问题，获取解答。
+【新增】学员在课程作业/练习任务和课程绑定的题库练习内答题时，可向AI伴学助手咨询题目的解题思路。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后可向AI伴学助手咨询题目的正确答案和题目解析。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后，根据学员的错题情况，将对应知识点和相关学习任务推送给学员。
+【新增】将专业对应的官网资讯推送给该专业下的课程学员。
+【新增】以App通知的形式发送督学提醒、按知识点推送学习任务、官网资讯。
+微网校
+【新增】开启“AI伴学服务”的课程，学员加入后提醒其制定学习计划，选择学习起止时间和每周学习日以及每日学习时长，预览学习计划，保存后生成学习计划。
+【新增】学员制定学习计划后，在每个学习日发送督学提醒，提醒学员完成学习。学习计划根据学员学习进度和答题情况自动调整。
+【新增】学员在任务详情页（考试任务除外）学习时，可向AI伴学助手发送问题，获取解答。
+【新增】学员在课程作业/练习任务和课程绑定的题库练习内答题时，可向AI伴学助手咨询题目的解题思路。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后可向AI伴学助手咨询题目的正确答案和题目解析。
+【新增】学员在课程作业/练习/考试任务和课程绑定的题库练习内答题后，根据学员的错题情况，将对应知识点和相关学习任务推送给学员。
+【新增】将专业对应的官网资讯推送给该专业下的课程学员。
+
 25.2.1
 PC
 【修复】修复已知问题。
