fix: #111010 修复文案提示

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -11258,3 +11258,4 @@ admin_v2.question.ai_analysis.upgrade_now: Upgrade now
 
 #二次验证
 admin_v2.secondary.verification.security_verification: 'Security verification'
+admin_v2.secondary.verification.security_verification.tips: 'To ensure the security of online school data export, SMS verification is required. Please use the phone number filled in when opening the online school to receive the verification code.'
