--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,19 @@
 CHANGELOG
 ==============
+25.2.3
+PC
+【新增】课程\班级\题库练习-学员管理：导出学员时增加短信验证，验证通过后导出。
+【新增】在学员管理、员工管理、订单管理导出信息时增加网校负责人手机号验证。
+【新增】自定义角色中增加导出权限设置，超管角色默认有导出权限。
+【优化】仅限超级管理员有“后台-系统”模块下的管理权限。
+【修复】直播公开课没有本地录制按钮。
+【修复】首页搜索框里面根据课程关键字无法搜索到课程。
+【修复】班级绑定题库，班级修改用户有效期，题库未同步。
+微网校
+【修复】彩虹树主题自适应微网校点击课程无反应。
+App
+【修复】IOS密码强度不够报错乱码。
+
 25.2.2（需联系EduSoho工作人员安装）
 PC
 管理员
