--- a/app/Resources/translations/js.en.yml
+++ b/app/Resources/translations/js.en.yml
@@ -2387,3 +2387,5 @@ course.market_setting.contract.model.partyBName: Party B's name
 course.market_setting.contract.model.iDNumber: ID number
 course.market_setting.contract.model.contactInformation: Contact information
 
+admin.login_connect.strong_pwd_skip_close_radio.prompt: Please check the agreement below before closing it
+
