--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3769,6 +3769,8 @@ my.teaching.course_set.select_type.live_open_course.not_purchase_live: 'Has not 
 my.teaching.course_set.select_type.live_open_course.available_after_open: 'Cloud Live Available after opening'
 my.teaching.course_set.select_type.live_open_course.valid_service: 'Cloud live service is not valid'
 my.teaching.course_set.select_type.live_open_course.no_permission: 'You do not have permission to create open course'
+my.teaching.course_set.select_type.normal_course.no_permission: 'You do not have permission to create normal course'
+my.teaching.course_set.select_type.live_course.no_permission: 'You do not have permission to create live course'
 my.teaching.multi_class.my_students: My Students
 my.teaching.multi_class.status: Status
 my.teaching.multi_class.student_num: Student Number
