--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -4374,6 +4374,8 @@ my.teaching.course_set.select_type.live_open_course.not_purchase_live: 还未购
 my.teaching.course_set.select_type.live_open_course.available_after_open: 云直播开启后可用
 my.teaching.course_set.select_type.live_open_course.valid_service: 云直播服务不在有效期内
 my.teaching.course_set.select_type.live_open_course.no_permission: 没有创建公开课的权限
+my.teaching.course_set.select_type.normal_course.no_permission: 没有创建普通课程的权限
+my.teaching.course_set.select_type.live_course.no_permission: 没有创建直播课程的权限
 
 #班课
 my.teaching.multi_class.my_students: 我的学员
