--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -2733,7 +2733,8 @@ user.register.password_label: Password
 user.register.password_label_placeholder: '5-20 letters or numbers, case sensitive'
 user.register.password_label_placeholder.low: '5-20 letters or numbers, case sensitive'
 user.register.password_label_placeholder.middle: '8-20 letters or numbers, including at least two, case sensitive'
-user.register.password_label_placeholder.high: '8-32 letters or numbers, , including letter uppercase, lowercase, numbers and symbols'
+user.register.password_label_placeholder.high: 'Please set a password consisting of 8 to 32 characters, which can include letters (both uppercase and lowercase), numbers, and symbols'
+user.register.enter_password: 'Enter your password'
 user.register.invite_code_label: 'Inviation code'
 user.register.invite_code_placeholder: 'If you have invitation code, please type in'
 user.register.i_agree: 'I''ve read and agree.'
