--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -3178,7 +3178,8 @@ user.oauth.bind_other_account: 绑定其他帐号？
 user.oauth.bind_existed_account: 绑定已有帐号？
 user.oauth.bind_error.bind_by_other: 该帐号已被绑定
 user.oauth.register.nickname_placeholder: 最长 18 个英文或 9 个汉字
-user.oauth.register.password__placeholder: 5-20 位英文、数字、符号
+user.oauth.register.password__placeholder: 请输入密码
+user.oauth.register.password_tip: 请设置8-32位包含字母大小写、数字、符号四种字符组合成的密码
 user.oauth.register_account_by_ways: 使用%accountType%创建帐号
 user.oauth.register_account.binding_account_by_email: 关联已有邮箱帐号
 user.oauth.register_account.binding_account_by_mobile: 绑定手机号
