--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3014,7 +3014,7 @@ user.settings.password_reset.reset_btn: 'Reset Password'
 user.settings.password_reset.find_password_btn: 'Find password'
 user.settings.password_level.low: 5-20 digits in English, numerals, symbols, case sensitive
 user.settings.password_level.middle: 8-20 digits in English, numerals, symbols, including at least two types, case sensitive
-user.settings.password_level.high: 8-32 bits of English, numbers, symbols, including English uppercase, lowercase, numbers and symbols
+user.settings.password_level.high: Please set a password consisting of 8 to 32 characters, which can include letters (both uppercase and lowercase), numbers, and symbols
 user.account_center: 'Account Center'
 user.menu_heading: 'Account'
 user.account_menu: 'My Bills'
