--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -6837,7 +6837,8 @@ admin.developer_setting.debug_label: Debugging
 admin.developer_setting.app_center_api_address: 'Application Center API address'
 admin.developer_setting.es_live_api_server: ES Live API
 admin.developer_setting.question_parse_api_server: Question Parse API
-admin.developer_setting.ai_api_server: AI API address
+admin.developer_setting.ai_api_server: AI API Address
+admin.developer_setting.ai_signal_server: AI Signal Address
 admin.developer_setting.push_api_server: New Push API
 admin.developer_setting.resource_api_server: 'Resource API address'
 admin.developer_face_address: AI Face API address
