--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -8178,7 +8178,8 @@ admin.developer_setting.debug_label: 调试
 admin.developer_setting.app_center_api_address: 应用中心API地址
 admin.developer_setting.es_live_api_server: 自研直播API地址
 admin.developer_setting.question_parse_api_server: 题目解析API地址
-admin.developer_setting.ai_api_server: AI API地址
+admin.developer_setting.ai_api_server: AI API 服务器地址
+admin.developer_setting.ai_signal_server: AI 信令服务器地址
 admin.developer_setting.push_api_server: 新 Push API地址
 admin.developer_setting.resource_api_server: 资源 API地址
 admin.developer_face_address: 人脸识别API地址
