--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -6594,9 +6594,10 @@ admin.login_connect.User_login_protection.some_IP_enter_wrong_password.banned: '
 admin.login_connect.User_login_protection.after: After
 admin.login_connect.User_login_captcha: 'User login captcha'
 admin.login_connect.User_login_captcha.help_block: 'After opening, users need to drag the verification code to check when they log in; If you switch to "mobile quick login", you always need to drag the verification code'
-admin.login_connect.student_strong_pwd.button: 'Student Strong Password Switch'
-admin.login_connect.strong_pwd_skip.danger: '⚠️After closing, students can log in with their original password, but the account security risk will significantly increase! It is recommended to operate cautiously and strengthen account monitoring or guide students to change passwords to enhance password strength, in order to reduce the risk of account theft'
-admin.login_connect.strong_pwd_skip_close_radio.prompt: 'Please check the agreement below before closing it'
+admin.login_connect.student_strong_pwd.button: 'Weak Password Detection During Student Login'
+admin.login_connect.student_strong_pwd.help_block: >
+  After enabling this feature, when a student logs in, if a weak password is detected, they will be required to change it to a strong password. <br />
+  <strong class="text-danger">After disabling this feature, students can continue logging in with weak passwords, which poses an account theft risk. Disabling is not recommended!</strong>
 admin.login_connect.User_login_protection.after.unblock: 'Minutes, unblock user /IP'
 admin.login_connect.weixinmob.frist.help_block: 'If turned on, users can register or login the site with wechat id in wechat app.'
 admin.login_connect.weixinmob.help_block: 'How to access:1. You need a certified <a target= "_blank" HREF = "https://MP.weixin.QQ.com" > wechat service account, </a>;2. A certified <a target= "_blank" HREF = "https://open.weixin.QQ.com" > wechat open platform </a> account;3. Bind the wechat service account with <a target=, "_blank" HREF = "https://open.weixin.QQ.com" > the open platform </a>.'
