--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3305,6 +3305,7 @@ cloud_file.use_status.used: Used
 cloud_file.upload_time: 'Uploaded'
 cloud_file.application: Application
 cloud_file.category: Category
+cloud_file.referenced_course: Referenced course
 cloud_file.type.all: All
 cloud_file.type.video: Video
 cloud_file.type.audio: Audio
