--- a/app/Resources/translations/messages.zh_CN.yml
+++ b/app/Resources/translations/messages.zh_CN.yml
@@ -3816,6 +3816,7 @@ cloud_file.use_status.used: 已使用
 cloud_file.upload_time: 上传时间
 cloud_file.application: 应用
 cloud_file.category: 分类
+cloud_file.referenced_course: 引用课程
 
 cloud_file.type.all: 全部
 cloud_file.type.video: 视频
