--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -58,7 +58,6 @@ site.information: 信息
 site.tips: 提示
 site.tips.delist: 确认下架？
 site.unknow_server_error: 发生未知错误
-
 site.incorrect.password: 密码错误
 user.settings.security.mobile_bind.success: 手机绑定成功
 user.settings.security.mobile_bind.fail: 手机绑定失败
@@ -66,7 +65,8 @@ user.settings.security.mobile_bind.fail: 手机绑定失败
 site.modify.success: 修改成功
 user.settings.security.password_modify.incorrect_password: 当前密码不正确，请重试！
 
-
+password.hint.normal: 8-32位字符，包含字母、数字、符号任意两种及以上组合成的密码
+password.hint.strong: 请设置8-32位包含字母大小写、数字、符号四种字符组合成的密码
 
 site.audio.quality.quota: 音质
 site.audio.quality.low: 流畅
@@ -836,6 +836,9 @@ validate.expiry_days_required_hint: 请输入有效期
 validate.empty_content_hint: 请输入内容!
 validate.no_number_first_hint: URL路径只能包含字母和数字,请以字母开头!长度大于2位
 validate.have_spaces: 密码不能有空格哦
+validate.password: 8-32位字符，包含字母、数字、符号任意两种及以上组合成的密码
+validate.password.strong: 8-32位字符，包含字母大小写、数字、符号四种字符组合成的密码
+validate.check_password.message: 8-32位字符，包含字母、数字、符号任意两种及以上组合成的密码
 validate.check_password_low.message: 5-20位英文、数字、符号，区分大小写
 validate.check_password_middle.message: 8-20位英文、数字、符号，至少包含两种，区分大小写
 validate.check_password_high.message: 请设置8-32位包含字母大小写、数字、符号四种字符组合成的密码
