--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -3986,6 +3986,7 @@ my.teaching.question_bank.question_category.name_label: Category Name
 my.teaching.question_bank.question.no_category: uncategorized
 my.teaching.question_bank.question.all: All Questions
 my.teaching.question_bank.question.set_category: Set Category
+my.teaching.question_bank.question.set_tag: Set Tag
 my.teaching.question_bank.question.selected: selected Number
 my.teaching.question_bank.question.set_score: Set Score
 my.teaching.question_bank.question.add: Add title
