feat: #113177 添加失焦校验

--- a/app/Resources/translations/js.zh_CN.yml
+++ b/app/Resources/translations/js.zh_CN.yml
@@ -747,7 +747,7 @@ validate.valid_starttime.required: 请选择开始时间
 validate.valid_fixedtime.required: 请选择考试开始和结束时间
 validate.valid_maxDuration: 固定考试时间不能超过10个小时
 validate.valid_endtime.required: 请选择结束时间
-validate.valid_email_input.message: 请输入有效的电子邮件地址
+validate.valid_email_input.message: 请输入正确的邮箱地址
 validate.valid_idcard_formate.message: 请输入有效的身份证号码
 validate.valid_url_input.message: 请输入有效的网址
 activity.testpaper_manage.required.number: 请至少输入一位数字
@@ -801,7 +801,7 @@ validate.alphanumeric.message: 必须是英文字母、数字及下划线组成
 validate.only_alphanumeric.message: 请输入数字或英文字母
 validate.raty_star.message: 请打分
 validate.reg_invite_code.message: 必须是5位数字、英文字母组成
-validate.phone.message: 请输入有效手机号码
+validate.phone.message: 请输入正确的手机号码
 validate.mobile_or_telephone.message: 请输入有效手机号码或者电话号码(区号-电话号码)
 validate.nickname.message: 不允许以1开头的11位纯数字
 validate.password_check.message: 密码错误
