feat(changelog): 更新 25.3.2 版本日志

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,26 @@
 CHANGELOG
 ==============
+25.3.2（2025-09-05）
+【新增】添加了所有题目类型支持批量修改分值。
+【新增】添加了在用户学习完返回首页后再次进去都能定位到上次学习的地方。
+【新增】添加了题目可标记标签的功能，方便老师更好管理的题目。
+【新增】添加了课程、班级、题库不显示价格的功能。
+【新增】添加了复制直播回放的功能。
+【新增】添加了云资源分类管理。
+【新增】添加了APP、新版微网校邮箱注册功能。
+【新增】优化了AI伴学助手中数学公式显示会出现错误语言的问题。
+【新增】填空题支持数学公式。
+【优化】取消了后台创建用户需要强制修改密码的操作。
+【优化】题目管理中的题目从更新时间排序改成创建时间排序。
+【优化】学完后会自动标记为任务已完成导致无法区分学到哪的问题。
+【优化】优化了题库内的题目和作业考试一样显示题目类型，比如显示单选题、多选题、问答题等。
+【优化】优化了学员/员工密码强度策略。
+【优化】优化了班级学员管理页面，把用户名/手机号搜索框放在最前面，方便老师搜索。
+【优化】优化了pc端错题本，查看错题记录时，正确选项标绿显示。
+【优化】优化了pc端错题本「任务名称」显示完整任务名称。
+【优化】添加了单独题库也能开启AI办学助手的功能。
+【优化】去除了对 IE 浏览器的支持。
+
 25.3.1（2025-08-07）
 PC
 【新增】添加密码格式提示：登录/注册账号时添加密码提示：请设置8-32位包含字母大写、字母小写、数字、符号四种字符组合成的密码
