fix(changelog): 更新 changelog 添加新版本发布说明

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 CHANGELOG
 ==============
+
+25.3.3（2025-09-05）
+【修复】题目导出未空的问题。
+【优化】填空题多个空时，区分正确/错误的空。
+
 25.3.2（2025-09-05）
 【新增】添加了所有题目类型支持批量修改分值。
 【新增】添加了在用户学习完返回首页后再次进去都能定位到上次学习的地方。
